# HighPerfCom

./: Ders_Notu.md  Ders_Notu2.md  Open_MP.md  README.md  weka_dagitik_spark_giris.md  weka_knowledgeflow_spark.md  weka_server_setup.md  weka_spark_kullanimi.md
Uygulamalar/: uygulamalar.md
Uygulamalar/OpenMP/: CMakeLists.txt  OpenMP_Calistirma.md  main.cpp  parallel_toplama.c  pi_hesaplama.c  seri_toplama.c  vektor_toplama.c
